--- a/app/assets/stylesheets/main.scss
+++ b/app/assets/stylesheets/main.scss
@@ -32,7 +32,7 @@ body {
             }
         } 
 
-        &.selected {
+        &.chooseable.selected {
             background-color: #238C22;
             border-color: #238C22; 
             color: white; 
